# KPlistEditor

./: .gitignore  CMakeLists.txt  KPlistEditor.kdev4  README
doc/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  kplisteditor.cpp  kplisteditor.desktop  kplisteditor.h  kplisteditor_part.cpp  kplisteditor_part.desktop  kplisteditor_part.h  kplisteditor_part.rc  kplisteditor_shell.rc  main.cpp  plisteditorwidget.cpp  plisteditorwidget.h  plisteditorwidget.ui
